<resources>
    <string name="app_name">Hotrip</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore">Explore</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="login_here">Login Here</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="signup_login_hint">Already have an account? Login</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="your_travel_assistant">Your Travel Assistant</string>
    <string name="login_background">login background</string>
    <string name="logout">Logout</string>
    <string name="search_here">Search Here</string>
    <string name="settings">Settings</string>
    <string name="greeting">Selamat Datang Di Hotrip!!</string>
    <string name="recommen">Recommended</string>
    <string name="description">description</string>
    <string name="location">Location</string>
    <string name="review">Review</string>
    <string name="rating">Rating</string>
    <string name="kategory">Kategory</string>
    <string name="title">Title</string>
    <string name="kota">Kota</string>
    <string name="daerah">Daerah</string>
    <string name="the_best_place_to_find_your_next_trip_and_explore_the_world_you_never_knew_before_here">The Best Place To Find Your Next Trip and Explore the world you never knew before here</string>
    <string name="welcome_to_hotrip_app">Welcome To Hotrip App</string>
    <string name="get_started">Get Started</string>

    <string name="your_location">Your Location</string>
    <string name="city_tag">City Tag</string>
    <string name="category">Category</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string-array name="cities_array">
        <item>Your Location</item>
        <item>Medan</item>
        <item>Padang</item>
        <item>Batam</item>
        <item>Jakarta</item>
        <item>Yogyakarta</item>
        <item>Lombok</item>
        <item>Bali</item>
    </string-array>
</resources>